--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 	  <title>Hello</title>
 	</head>
 	<body>
-	  <div id="app"></div>
+	  <div id="app"></div>	  
+      <script src="/index_bundle.js"></script>
 	</body>
 </html>
